--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,19 @@
+html{
+font-size: 62.5%;
+}
 body{
     margin: 0;
     padding: 0;
+    height: 100%;
     font-size: 13px;
+    flex-direction: column;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 header{
     width: 100%;
     height: 60px;
+    flex-grow: 1;
 }
 
 header nav{
@@ -35,15 +41,15 @@ a{
 }
 
 nav .nav-right-section .menu-icon{
-    display: flex;
-    align-items: center;
-    gap: 5px;
+    
+    
     padding-left: 30px;
     background-image:  url("https://static.thenounproject.com/png/756729-200.png");
     background-repeat: no-repeat;
-    background-position: left center;
-    background-size: 25px 25px;
+    background-position: center;
+    background-size: contain;
     height: 25px;
+    width: 10px;
 }
 
 nav .nav-right-section img{
@@ -55,6 +61,7 @@ nav .nav-right-section img{
 main{
     margin-top: 150px;
     text-align: center;
+    flex-grow: 1;
 }
 
 main .main-logo{
@@ -134,9 +141,67 @@ main .main-buttons button{
 
 main .main-buttons button:hover{
     border: 1px solid #c6c6c6;
-    box-shadow: 0 1px 1px  #000001;
+    box-shadow: 0 1px 1px #000001;
     color: #222;
+}
+footer {
+    width: 100%;
+    background-color: #f2f2f2;
+    padding: 20px 0;
+    position: relative;
+    bottom: 0;
+    position: absolute;
+}
 
+.footer-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.footer-ubication {
+    margin-bottom: 15px;
+    width: 100%;
+    display: flex;
+    justify-content: flex-start; /* Alinea 'Mexico' a la izquierda */
+    padding-left: 20px; /* Asegura que 'Mexico' esté un poco alejado del borde */
+}
+
+.footer-ubication a {
+    text-decoration: none;
+    color: #5f6368;
+}
+
+.div-footer-ubication {
+    text-align: left;
+}
+
+.footer-links {
+    display: flex;
+    justify-content: space-between;
+    width: 100%; /* Ancho completo para evitar separación */
+    padding-left: 20px; /* Asegura que todos los enlaces estén alineados al borde izquierdo */
+}
+
+.footer-links-left {
+    justify-content: flex-start; /* Alinea estos enlaces a la izquierda */
+    margin-right: auto; /* Asegura que el espacio restante se quede a la derecha */
+}
+
+.footer-links-right {
+    justify-content: flex-end; /* Alinea estos enlaces a la derecha */
+}
+
+.footer-links a {
+    text-decoration: none;
+    color: #5f6368;
+    margin-right: 20px;
+    margin-bottom: 10px;
+    display: inline-block;
+}
+
+.footer-links a:hover {
+    color: #222;
 }
 
 
